--- a/files/homeassistant/hacs_version/individual_ams_ver2.yaml
+++ b/files/homeassistant/hacs_version/individual_ams_ver2.yaml
@@ -50,6 +50,8 @@ elements:
       top: 28%
       left: 21.4%
       '--paper-item-icon-color': white
+      '--icon-primary-color': white
+      '--state-icon-color': white
       background-color: rgba(0,0,0,0.5)
       box-shadow: 0 0 5px 5px var(--tray_1_bg)
       border-radius: 50px
@@ -96,6 +98,8 @@ elements:
       top: 28%
       left: 39.7%
       '--paper-item-icon-color': white
+      '--icon-primary-color': white
+      '--state-icon-color': white
       background-color: rgba(0,0,0,0.5)
       box-shadow: 0 0 5px 5px  var(--tray_2_bg)
       border-radius: 50px
@@ -142,6 +146,8 @@ elements:
       top: 28%
       left: 59.7%
       '--paper-item-icon-color': white
+      '--icon-primary-color': white
+      '--state-icon-color': white
       background-color: rgba(0,0,0,0.5)
       box-shadow: 0 0 5px 5px  var(--tray_3_bg)
       border-radius: 50px
@@ -188,6 +194,8 @@ elements:
       top: 28%
       left: 79.6%
       '--paper-item-icon-color': white
+      '--icon-primary-color': white
+      '--state-icon-color': white
       background-color: rgba(0,0,0,0.5)
       box-shadow: 0 0 5px 5px var(--tray_4_bg)
       border-radius: 50px
@@ -233,7 +241,7 @@ elements:
           type: state-icon
           entity: sensor.{HA_AMS_DEVICE_NAME}_humidity_index
           icon: >-
-            ${'fapro:humidity-level-dark-' +
+            ${'local:humidity-level-dark-' +
             states['sensor.{HA_AMS_DEVICE_NAME}_humidity_index'].state + '#fullcolor'}
         style:
           top: 38.5%
@@ -249,7 +257,7 @@ card_mod:
         background: none !important;
         border: none !important;
         box-shadow: none !important;
-        --humidity-border-color: {% if states('sensor.{HA_AMS_DEVICE_NAME}_humidity_index')  != 'unavailable' and states('sensor.{HA_AMS_DEVICE_NAME}_humidity_index') | int > 3 %} rgba(255, 255, 126, 0.5); {% elif states('sensor.{HA_AMS_DEVICE_NAME}_humidity_index')  != 'unavailable' and states('sensor.{HA_AMS_DEVICE_NAME}_humidity_index') | int > 1 %} rgba(228,127,97,1.0); {% else %} rgba(194,74,72,1.0); {% endif %}
+        --humidity-border-color: {% if states('sensor.{HA_AMS_DEVICE_NAME}_humidity_index')  != 'unavailable' and states('sensor.{HA_AMS_DEVICE_NAME}_humidity_index') | int > 3 %} rgba(194,74,72,1.0); {% elif states('sensor.{HA_AMS_DEVICE_NAME}_humidity_index')  != 'unavailable' and states('sensor.{HA_AMS_DEVICE_NAME}_humidity_index') | int > 2 %} rgba(228,127,97,1.0); {% elif states('sensor.{HA_AMS_DEVICE_NAME}_humidity_index')  != 'unavailable' and states('sensor.{HA_AMS_DEVICE_NAME}_humidity_index') | int > 1 %} rgba(255, 255, 126, 0.5); {% else %} rgba(0,255,17,0.75); {% endif %}
         --tray_1_color: {% if is_state_attr('sensor.{HA_AMS_DEVICE_NAME}_tray_1', 'color', '#00000000') %} rgb(255, 255, 255); {% else %} {{state_attr('sensor.{HA_AMS_DEVICE_NAME}_tray_1', 'color') }}; {% endif %}
         --tray_2_color: {% if is_state_attr('sensor.{HA_AMS_DEVICE_NAME}_tray_2', 'color', '#00000000') %} rgb(255, 255, 255); {% else %} {{state_attr('sensor.{HA_AMS_DEVICE_NAME}_tray_2', 'color') }}; {% endif %}
         --tray_3_color: {% if is_state_attr('sensor.{HA_AMS_DEVICE_NAME}_tray_3', 'color', '#00000000') %} rgb(255, 255, 255); {% else %} {{state_attr('sensor.{HA_AMS_DEVICE_NAME}_tray_3', 'color') }}; {% endif %}
