--- a/files/homeassistant/nodered_version/individual_control.yaml
+++ b/files/homeassistant/nodered_version/individual_control.yaml
@@ -71,6 +71,7 @@ cards:
               border: none;
               --pbs-button-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'Silent') or is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'silent') %} yellow; {% else %} grey; {% endif %}
               --paper-item-icon-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'Silent') or is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'silent') %} yellow; {% else %} grey; {% endif %}
+              --icon-primary-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'Silent') or is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'silent') %} yellow; {% else %} grey; {% endif %}
             }
       - type: custom:hui-element
         card_type: button
@@ -91,6 +92,7 @@ cards:
               background-color: rgba(0,0,0,0);
               border: none;
               --paper-item-icon-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'Standard') or is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'standard') %} yellow; {% else %} grey; {% endif %}
+              --icon-primary-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'Standard') or is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'standard') %} yellow; {% else %} grey; {% endif %}
             }
       - type: custom:hui-element
         card_type: button
@@ -111,6 +113,7 @@ cards:
               background-color: rgba(0,0,0,0);
               border: none;
               --paper-item-icon-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'Sport') or is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'sport') %} yellow; {% else %} grey; {% endif %}
+              --icon-primary-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'Sport') or is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'sport') %} yellow; {% else %} grey; {% endif %}
             }
       - type: custom:hui-element
         card_type: button
@@ -131,6 +134,8 @@ cards:
               background-color: rgba(0,0,0,0);
               border: none;
               --paper-item-icon-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'Ludicrous') or is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'ludicrous') %} yellow; {% else %} grey; {% endif %}
+              --icon-primary-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'Ludicrous') or is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'ludicrous') %} yellow; {% else %} grey; {% endif %}
+              --state-icon-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'Ludicrous') or is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'ludicrous') %} yellow; {% else %} grey; {% endif %}
             }
   - type: custom:gap-card
     height: 16
@@ -193,6 +198,8 @@ cards:
                 border: none;
                 pointer-events: none;
                 --paper-item-icon-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'Custom') %} yellow; {% else %} grey; {% endif %}
+                --icon-primary-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'Custom') %} yellow; {% else %} grey; {% endif %}
+                --state-icon-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'Custom') %} yellow; {% else %} grey; {% endif %}
               }
         - features:
             - style: slider
@@ -214,6 +221,8 @@ cards:
                 border: none; 
                 padding: 12px 0px 12px 0px !important;
                 --paper-item-icon-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'Custom') %} yellow; {% else %} grey; {% endif %}
+                --icon-primary-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'Custom') %} yellow; {% else %} grey; {% endif %}
+                --state-icon-color: {% if is_state('select.{HA_PRINTER_DEVICE_NAME}_speed', 'Custom') %} yellow; {% else %} grey; {% endif %}
               }
 
               .content {
@@ -302,13 +311,17 @@ cards:
               box-shadow: none !important;
               background-color: rgba(0,0,0,0);
               border: none;
-              --paper-item-icon-color: {% if is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'RUNNING') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'PAUSE') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'running') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'pause') %} orange; {% else %} grey; {% endif %}    
+              --paper-item-icon-color: {% if is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'RUNNING') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'PAUSE') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'running') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'pause') %} orange; {% else %} grey; {% endif %}   
+              --icon-primary-color: {% if is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'RUNNING') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'PAUSE') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'running') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'pause') %} orange; {% else %} grey; {% endif %}    
+              --state-icon-color: {% if is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'RUNNING') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'PAUSE') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'running') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'pause') %} orange; {% else %} grey; {% endif %}    
             }
       - type: conditional
         conditions:
           - condition: state
             entity: button.{HA_PRINTER_DEVICE_NAME}_home
-            state: unavailable
+            state: 
+                - "unavailable"
+                - "unknown"  
         card:
           type: custom:gap-card
           height: 25
@@ -316,7 +329,9 @@ cards:
         conditions:
           - condition: state
             entity: button.{HA_PRINTER_DEVICE_NAME}_home
-            state_not: unavailable
+            state_not: 
+                - "unavailable"
+                - "unknown"  
         card:
           type: custom:button-card
           entity: sensor.{HA_PRINTER_DEVICE_NAME}_homed
@@ -439,6 +454,8 @@ cards:
               background-color: rgba(0,0,0,0);
               border: none;
               --paper-item-icon-color: {% if is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'RUNNING') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'PAUSE') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'running') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'pause') %} red; {% else %} grey; {% endif %}
+              --icon-primary-color: {% if is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'RUNNING') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'PAUSE') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'running') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'pause') %} red; {% else %} grey; {% endif %}
+              --state-icon-color: {% if is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'RUNNING') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'PAUSE') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'running') or is_state('sensor.{HA_PRINTER_DEVICE_NAME}_print_status', 'pause') %} red; {% else %} grey; {% endif %}
             }
   - type: conditional
     card:
@@ -473,3 +490,6 @@ cards:
       - condition: state
         entity: sensor.{HA_PRINTER_DEVICE_NAME}_homed
         state_not: unavailable
+      - condition: state
+        entity: sensor.{HA_PRINTER_DEVICE_NAME}_homed
+        state_not: unknown
