--- a/files/homeassistant/nodered_version/individual_printer_image_x1e.yaml
+++ b/files/homeassistant/nodered_version/individual_printer_image_x1e.yaml
@@ -17,6 +17,7 @@ elements:
               left: 83.5%
               "--mdc-icon-size": 3em
               "--paper-item-icon-color": "#E7A332"
+              "--icon-primary-color": "#E7A332"
             icon: mdi:alert
       - type: conditional
         conditions:
@@ -36,6 +37,24 @@ elements:
               font-size: 0.8em
               color: rgba(0,0,0,0)
               "--paper-item-icon-color": >-
+                ${states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -50 ?
+                'green' :
+                  states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -60 ?
+                'yellow' :
+                  states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -67 ?
+                'orange' :
+                  states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -70 ?
+                'red' : 'red'}
+              "--icon-primary-color": >-
+                ${states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -50 ?
+                'green' :
+                  states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -60 ?
+                'yellow' :
+                  states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -67 ?
+                'orange' :
+                  states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -70 ?
+                'red' : 'red'}
+              "--state-icon-color": >-
                 ${states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -50 ?
                 'green' :
                   states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -60 ?
@@ -78,6 +97,24 @@ elements:
                 'orange' :
                   states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -70 ?
                 'red' : 'red'}
+              "--icon-primary-color": >-
+                ${states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -50 ?
+                'green' :
+                  states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -60 ?
+                'yellow' :
+                  states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -67 ?
+                'orange' :
+                  states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -70 ?
+                'red' : 'red'}
+              "--state-icon-color": >-
+                ${states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -50 ?
+                'green' :
+                  states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -60 ?
+                'yellow' :
+                  states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -67 ?
+                'orange' :
+                  states['sensor.{HA_PRINTER_DEVICE_NAME}_wifi_signal'].state > -70 ?
+                'red' : 'red'}
       - type: conditional
         conditions:
           - entity: sensor.{HA_PRINTER_DEVICE_NAME}_door
@@ -90,6 +127,7 @@ elements:
               left: 83.5%
               '--mdc-icon-size': 3em
               '--paper-item-icon-color': '#E7A332'
+              "--icon-primary-color": "#E7A332"
             icon: mdi:alert
       - entity: light.{HA_PRINTER_DEVICE_NAME}_chamber_light
         type: state-icon
@@ -115,8 +153,11 @@ elements:
         elements:
           - type: conditional
             conditions:
-              - entity: image.{HA_PRINTER_DEVICE_NAME}_print_preview
-                state_not: unavailable
+              - condition: state
+                entity: image.{HA_PRINTER_DEVICE_NAME}_print_preview
+                state_not: 
+                - "unavailable"
+                - "unknown"  
             elements:
               - type: custom:hui-element
                 card_type: picture-entity
@@ -155,8 +196,11 @@ elements:
           color: rgba(0,0,0,0)
       - type: conditional
         conditions:
-          - entity: sensor.{HA_PRINTER_DEVICE_NAME}_chamber_temperature
-            state_not: unavailable
+          - condition: state
+            entity: sensor.{HA_PRINTER_DEVICE_NAME}_chamber_temperature
+            state_not: 
+                - "unavailable"
+                - "unknown"  
         elements:
           - entity: sensor.{HA_PRINTER_DEVICE_NAME}_chamber_temperature
             type: state-badge
